# labs_term_05

./: .gitignore  README.md
Computer Networks/Зачет/: Зачет.pkt
Computer Networks/Практика 1/: КС_Практика_1.docx
Computer Networks/Практика 2/: 2_2.pkt
Computer Networks/Практика 3/: 3_2.pkt
Computer Networks/Практика 4/: 4.1_1.pkt  4.1_2.pkt  4.1_4.pkt  4.2.pkt  КС_Практика_4.docx
Computer System Architecture/lab_3/: XOR Circuit build using Logisim.circ  var10.circ  var8.circ
Computer System Architecture/lab_4/: RS_triggers.circ
Computer System Architecture/lab_5/: lab_5.circ
Computer System Architecture/lab_6/: lab_6.circ
Computer System Architecture/lab_7/: lab_7.circ
Computer System Architecture/lab_8/: lab_8.circ
Digital Competencies/lab_1/: lesson_1.ipynb
Numerical Methods/lab_1/: chord.py  diff.py  first_step.py  newton.py  secants.py  simple_iteration.py  steff.py  Отчет.docx
Numerical Methods/lab_10/: seidel_method.py  simple_iteration.py  Отчет.docx
Numerical Methods/lab_2/: main.cpp  Отчет.docx
Numerical Methods/lab_3/: rectangles.cpp  simpson.cpp  trapez.cpp  Отчет.docx
Numerical Methods/lab_4/: derivative.cpp  interpolation.cpp  Отчет.docx
Numerical Methods/lab_5/: first_order.cpp  second_order.cpp  Отчет.docx
Numerical Methods/lab_6/: half_plane.py  rectangle.py  Отчет.docx
Operation Systems/: Алгоритм исключения недавно использовавшейся страницы.docx  ОС_Практика_1.docx  ОС_Практика_2.docx
Real Time Systems/lab_8/: CMakeLists.txt  LockFreeStack.cpp  LockFreeStack.hpp  node.hpp  Отчет.docx
(+36 files in other folders)
